# Metodos-Numericos-C-Terminal

./: CMakeLists.txt  main.c  metodos_numericos
Metodos/Ajuste de Curvas/: ajuste_curvas.c  ajuste_curvas.h  interpolacion_spline.c  interpolacion_spline.h
Metodos/Diferenciacion Numerica/: sistemas_diferenciales.c  sistemas_diferenciales.h
Metodos/Diferenciacion Numerica/Diferenciacion/: diferenciacion_numerica.c  diferenciacion_numerica.h
Metodos/Diferenciacion Numerica/Ecuaciones Diferenciales/: edo.c  edo.h  runge_kutta.c  runge_kutta.h
Metodos/Integracion/: cuadratura_gauss.c  cuadratura_gauss.h  integracion_numerica.c  integracion_numerica.h  numerica.txt
Metodos/Localizacion De Raices/: localizacion_raices.c  localizacion_raices.h
Metodos/Sistemas de Ecuaciones Lineales/: sistemas_ecuaciones.c  sistemas_ecuaciones.h
